.ci/policies/base/probes.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-probes
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
    policies.kyverno.io/title: Validate Probes
    policies.kyverno.io/category: Sample
    policies.kyverno.io/severity: medium
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Liveness and readiness probes accomplish different goals, and setting both to the same
      is an anti-pattern and often results in app problems in the future. This policy
      checks that liveness and readiness probes are not equal and that at least one is defined.
spec:
  validationFailureAction: Audit
  background: false
  rules:
    - name: validate-probes-exist
      match:
        any:
          - resources:
              kinds:
                - Deployment
                - DaemonSet
                - StatefulSet
      validate:
        message: 'At least one probe (liveness or readiness) must be defined.'
        deny:
          conditions:
            any:
              - key: '{{ request.object.spec.template.spec.containers[?!readinessProbe
                  && !livenessProbe] | length(@) }}'
                operator: GreaterThan
                value: 0

    - name: validate-probes-are-different
      match:
        any:
          - resources:
              kinds:
                - Deployment
                - DaemonSet
                - StatefulSet
      validate:
        message: 'Liveness and readiness probes cannot be identical.'
        deny:
          conditions:
            any:
              - key: '{{ request.object.spec.template.spec.containers[?readinessProbe
                  && livenessProbe && readinessProbe==livenessProbe] | length(@) }}'
                operator: GreaterThan
                value: 0
