.ci/policies/base/require-ingress-class.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-ingress-classes
  annotations:
    policies.kyverno.io/title: Restrict Ingress Classes
    policies.kyverno.io/category: Sample
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/description: >-
      Ingress classes should only be allowed which match up to deployed Ingress controllers
      in the cluster. Allowing users to define classes which cannot be satisfied by a deployed
      Ingress controller can result in either no or undesired functionality.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: validate-ingress
      match:
        any:
          - resources:
              kinds:
                - Ingress
      validate:
        message: 'Ingress class must be specified'
        deny:
          conditions:
            any:
              - key: "{{ request.object.spec.ingressClassName || '' }}"
                operator: Equals
                value: ''
